--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 </head>
 <body>
   <div class="card" id="main-card">
-    <img src="download.jpg" alt="Крысы">
+    <img src="C:\Users\Мария\Pictures\Screenshots\rat-Без названия.jpg" alt="Крысы">
     <div class="title">Спасибо за информацию!</div>
     <div class="message">Еще увидимся!</div>
     <div class="buttons">
@@ -100,7 +100,7 @@
     function showCat(){
       document.body.innerHTML = `
         <div class="fullscreen cat-screen">
-          <img src="download (1).jpg" alt="Котик">
+          <img src="C:\Users\Мария\Pictures\Screenshots\cat-images.jpg" alt="Котик">
           <div style="font-size:32px">Молодец!</div>
         </div>
       `;
